Kubernetes/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: __NAMESPACE__
  labels:
    name: __NAMESPACE__
