Kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: __IMAGE_NAME__
  labels:
    app: __IMAGE_NAME__
spec:
#   replicas: 1
   selector:
     matchLabels:
       app: __IMAGE_NAME__
   template:
     metadata:
       labels:
         app: __IMAGE_NAME__
         service: __IMAGE_NAME__
     spec:
       containers:
         - name: __IMAGE_NAME__
           image: warshipregistry.azurecr.io/__IMAGE_NAME__:__IMAGE_TAG__
           imagePullPolicy: Always
           ports:
             - containerPort: 80
             - containerPort: 443
               # protocol: TCP
