Kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: __IMAGE_NAME__
  namespace: __NAMESPACE__
  labels:
    app: __IMAGE_NAME__
    service: __IMAGE_NAME__
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
  selector:
    service: __IMAGE_NAME__
