Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default-Ingress
spec: 
  defaultBackend:
    service:
      name: __SERVICE_NAME__
      port:
        number: 80
